# aw_watcher_procrastination

./: .cursorrules  .gitignore  README.md  activity_categorizer.py  activity_rules.json  base-prompt.md  dev-requirements.txt  example-1-bucket.py  example-all-buckets.py  notification_manager.py  procrastination_monitor.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  settings.example.json  settings.json  setup.py  start.bat  start.sh
src/: __init__.py  activity_categorizer.py  event_processor.py  main.py  notification_window.py  settings.py
src/aw_watcher_ask/: utils.py
src/aw_watcher_procrastination/: __main__.py  activity_categorizer.py  event_processor.py  main.py  notification_window.py  settings.py  time_utils.py  updater.py
tests/: __init__.py  test_activity_categorizer.py  test_event_processor.py  test_notification_window.py  test_settings.py  test_time_utils.py
tests/from aw_watcher_ask/: test_cli.py  test_core.py  test_utils.py
