[tool.poetry]
name = "aw-watcher-ask"
version = "0.1.0"
description = "An ActivityWatch watcher to randomly pose questions to the user."
authors = ["bcbernardo <bc.bernardo@hotmail.com>"]

[tool.poetry.scripts]
aw-watcher-ask = "aw_watcher_ask.cli:app"

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.4"
aw-client = "^0.5.4"
croniter = "^1.0.15"
loguru = "^0.5.3"
Unidecode = "^1.2.0"
timeout-decorator = "^0.5.0"
pyzenity = {git = "https://github.com/bcbernardo/Zenity.git", rev="ab46b78"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=activity_categorizer --cov-report=term-missing"
testpaths = [
    "test_activity_categorizer.py",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
